@@ -38,8 +38,6 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.ConsoleCommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.event.Event;
-import org.bukkit.event.Event.Priority;
-import org.bukkit.event.world.WorldListener;
 import org.bukkit.plugin.PluginDescriptionFile;
 import org.bukkit.plugin.ServicePriority;
 import org.bukkit.plugin.java.JavaPlugin;
@@ -82,7 +80,7 @@ public class GroupManager extends JavaPlugin {
 
 	private GMLoggerHandler ch;
 	public static BukkitPermissions BukkitPermissions;
-	private static WorldListener WorldEvents;
+	private static GMWorldListener WorldEvents;
 	public static final Logger logger = Logger.getLogger(GroupManager.class.getName());
 
 	// PERMISSIONS FOR COMMAND BEING LOADED
